<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.register.RegisterFirstStepFragment">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298">

        <TextView
            android:id="@+id/regFirst_txt_email"
            style="@style/Nafea_DefaultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/regFirst_et_email"
            style="@style/Nafea_DefaultTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/regFirst_txt_confirmEmail"
            style="@style/Nafea_DefaultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_confirmEmail" />

        <EditText
            android:id="@+id/regFirst_et_confirmEmail"
            style="@style/Nafea_DefaultTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/regFirst_txt_pass"
            style="@style/Nafea_DefaultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/regFirst_et_pass"
            style="@style/Nafea_DefaultTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/regFirst_txt_rePass"
            style="@style/Nafea_DefaultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_rePassword" />

        <EditText
            android:id="@+id/regFirst_et_rePass"
            style="@style/Nafea_DefaultTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/regFirst_b_next"
            style="@style/Nafea_DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#03A9F4"
            android:text="@string/buttonText_next"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="2dp"></Space>

        <Button
            android:id="@+id/regFirst_b_cancel"
            style="@style/Nafea_DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonText_cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>