<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">
    
    <LinearLayout
        android:id="@+id/fields_verBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_txt_email"
            style="@style/Nafea_DefaultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/login_et_email"
            style="@style/Nafea_DefaultTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/login_txt_pass"
            style="@style/Nafea_DefaultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/login_et_pass"
            style="@style/Nafea_DefaultTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/login_b_login"
            style="@style/Nafea_DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonText_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/login_txtb_register"
                style="@style/Nafea_TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickableText_createAccount" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>